# fast-stm

./: CHANGELOG.md  Cargo.toml  README.md  crates.js  flake.nix  help.html  index.css  index.html  search-index.js  settings.html  shell.nix  src-files.js
.github/workflows/: bench.yml  build.yml  doc.yml  publish.yml  publishe.yml  test.yml
benches/: Cargo.toml  all.html  index.html
benches/benches/: init.rs  load.rs  read.rs  store.rs  transactions.rs  tvars.rs  write.rs
docs/: build.sh
fast-stm/: Cargo.toml
fast-stm/src/: lib.rs  result.rs  test.rs  tvar.rs
fast-stm/src/av/: mod.rs  tvar.rs
fast-stm/src/av/transaction/: mod.rs
fast-stm/src/hl/: tvar.rs
fast-stm/src/hl/transaction/: mod.rs
fast-stm/src/standard/: tvar.rs
fast-stm/src/standard/transaction/: control_block.rs  log_var.rs  mod.rs
fast-stm/src/transaction/: control_block.rs  log_var.rs  mod.rs  profiled.rs  regular.rs
fast_stm/: all.html  enum.StmError.html  enum.TransactionControl.html  enum.TransactionError.html  enum.TransactionResult.html  fn.abort.html  fn.atomically.html  fn.atomically_with_err.html  fn.commit_transaction.html  fn.guard.html  fn.init_transaction.html  fn.optionally.html  fn.retry.html  fn.unwrap_or_abort.html  fn.unwrap_or_retry.html  index.html  macro.try_or_coerce!.html  macro.try_or_coerce.html  sidebar-items.js  struct.TVar.html  struct.Transaction.html  struct.TransactionTallies.html  type.StmClosureResult.html  type.StmResult.html  type.TransactionClosureResult.html
fast_stm/result/: enum.StmError.html  enum.TransactionError.html  enum.TransactionResult.html  type.StmClosureResult.html  type.StmResult.html  type.TransactionClosureResult.html
fast_stm/transaction/: enum.TransactionControl.html  struct.Transaction.html  struct.TransactionTallies.html
fast_stm/tvar/: struct.TVar.html
light-stm/: Cargo.toml
light-stm/src/: lib.rs  result.rs  test.rs  tvar.rs
light-stm/src/transaction/: mod.rs
search.desc/benches/: benches-desc-0-.js
search.desc/fast_stm/: fast_stm-desc-0-.js
search.index/: 0467d944956e.js  060dfae11fce.js  0a9b5d1ac118.js  0ca9a473c13c.js  0d6f394b502e.js  10fee0fca43b.js  155dadacba.js  1d242af40398.js  1dc583d0aa7e.js  230136ed694c.js  2ee110fd95c4.js  2fe8e456d9.js  32951c8cf9.js  3a5c8fbf564b.js  3b4600c408.js  3d4e67661aa2.js  448fe6ac4a.js  4718c90d6836.js  47cc2cf4d3e6.js  4a1ed6f958.js  5227da2435.js  5a60c207011f.js  5dd957a1e16b.js  5feb0278f558.js  6282501006c4.js  74ec066ff378.js  795579029569.js  7a0881e11673.js  7a15c35681.js  root.js
search.index/crateNames/: e40de6f89610.js
search.index/desc/: 410de11db793.js  5091dc4161.js  5db1b6e07064.js  dea458562ef4.js
search.index/entry/: 150d7f4206.js  8cf9cfafe860.js  b555df5d2ef2.js  e8ef56b12c6c.js
search.index/function/: 59e5684a826c.js  8e0af35f5f35.js  9743dc7ca23b.js  e695b4ae28.js
search.index/generic_inverted_index/: 0a2e03afba08.js  1dc969008d7d.js  45699a5da1.js  6e4d1ea94881.js
search.index/name/: 631380a321.js  72882481e287.js  8f83f34da3c2.js  c0107d164b45.js
search.index/normalizedName/: 12726cb55ad5.js  61bfaa0858.js  b7823b7a8fad.js  daea48296124.js
search.index/path/: 1a315f630d73.js  e053b5c73151.js
search.index/type/: 55704511c131.js  7ce43e79b021.js  be4c5c4d23.js  d0742332f056.js
src/: lib.rs
src/benches/: lib.rs.html
src/fast_stm/: lib.rs.html  result.rs.html  tvar.rs.html
src/fast_stm/transaction/: control_block.rs.html  log_var.rs.html  mod.rs.html
trait.impl/core/clone/: trait.Clone.js
trait.impl/core/cmp/: trait.Eq.js  trait.PartialEq.js
trait.impl/core/convert/: trait.From.js
trait.impl/core/default/: trait.Default.js
trait.impl/core/error/: trait.Error.js
trait.impl/core/fmt/: trait.Debug.js  trait.Display.js
trait.impl/core/iter/traits/accum/: trait.Sum.js
trait.impl/core/marker/: trait.Copy.js  trait.Freeze.js  trait.Send.js  trait.StructuralPartialEq.js  trait.Sync.js  trait.Unpin.js  trait.UnsafeUnpin.js
trait.impl/core/ops/arith/: trait.AddAssign.js
trait.impl/core/panic/unwind_safe/: trait.RefUnwindSafe.js  trait.UnwindSafe.js
type.impl/core/result/: enum.Result.js
