[workspace]
resolver = "2"
members = [
    "fast-stm",
    "benches"
]

[workspace.package]
version = "0.5.0"
edition = "2021"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/imrn99/fast-stm"
repository = "https://github.com/imrn99/fast-stm"
readme = "README.md"
categories = ["concurrency"]
keywords = ["stm", "atomic", "transaction", "lockfree", "concurrency"]
description = """
Performance-focused implementation of software transactional memory.
Allows composable atomic operations.
"""
authors = [
    "Isaie Muron <github@imrn.fr>",
    "Marthog <Marthog@users.noreply.github.com>"
]

[workspace.dependencies]
# members
fast-stm = { version = "0.5.0", path = "./fast-stm" }

# external
parking_lot = { version = "0.5.0", default-features = false }
