[package]
name = "benches"
version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
readme.workspace = true
categories.workspace = true
keywords.workspace = true
description.workspace = true
authors = ["Isaie Muron <github@imrn.fr>"]

[dependencies]
parking_lot = { workspace = true, default-features = false }

