[package]
name = "benches"
version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
readme.workspace = true
categories.workspace = true
keywords.workspace = true
description.workspace = true
authors = ["Isaie Muron <github@imrn.fr>"]

[dev-dependencies]
fast-stm.workspace = true
atomic.workspace = true
bytemuck.workspace = true
criterion.workspace = true

[[bench]]
name = "init-time"
path = "benches/init.rs"
harness = false

[[bench]]
name = "load-time"
path = "benches/load.rs"
harness = false

[[bench]]
name = "store-time"
path = "benches/store.rs"
harness = false

