[package]
name = "benches"
version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
readme.workspace = true
categories.workspace = true
keywords.workspace = true
description.workspace = true
authors = ["Isaie Muron <github@imrn.fr>"]

[dev-dependencies]
fast-stm = { workspace = true, features = ["bench"] }
criterion.workspace = true

[[bench]]
name = "read-time"
path = "benches/read.rs"
harness = false

[[bench]]
name = "write-time"
path = "benches/write.rs"
harness = false

[[bench]]
name = "tvar-struct"
path = "benches/tvars.rs"
harness = false

