[package]
name = "fast-stm"
version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
readme.workspace = true
categories.workspace = true
keywords.workspace = true
description.workspace = true
authors.workspace = true

[features]
arrayvec = ["dep:arrayvec"]
heapless = ["dep:heapless"]


[dependencies]
cfg-if.workspace = true
parking_lot.workspace = true
arrayvec = { workspace = true, optional = true }
heapless = { workspace = true, optional = true }

