[package]
name = "fast-stm"
version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
readme.workspace = true
categories.workspace = true
keywords.workspace = true
description.workspace = true
authors.workspace = true

[features]
default = ["wait-on-retry"]
wait-on-retry = []

[dependencies]
parking_lot = { workspace = true }
thiserror = { workspace = true }
