[package]
name = "fast-stm"
version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
readme.workspace = true
categories.workspace = true
keywords.workspace = true
description.workspace = true
authors.workspace = true

[features]
default = ["wait-on-retry"]

hash-registers = ["dep:rustc-hash"]
wait-on-retry = []

[dependencies]
cfg-if = { workspace = true }
parking_lot = { workspace = true }
rustc-hash = { workspace = true, optional = true }
thiserror = { workspace = true }

[build-dependencies]
rustversion.workspace = true
